# codex-cost

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
artifacts/branding/: codex-cost-logo-philosophy.md
docs/: quota-mock-a-lite.html  quota-mock.html
docs/superpowers/plans/: 2026-03-18-quota-settings.md
docs/superpowers/specs/: 2026-03-18-quota-settings-design.md  2026-03-23-single-window-navigation-design.md
scripts/: generate_app_icons.py  prepare-tauri-bundle.mjs
src/: main.ts  settings.css  settings.ts  styles.css  types.d.ts
src-tauri/: Cargo.toml  build.rs  proxy_config.rs  tauri.conf.json
src-tauri/assets/: default-pricing.json
src-tauri/capabilities/: settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: domain.rs  lib.rs  main.rs  pricing.rs  service.rs  settings.rs  snapshot_store.rs
src-tauri/src/providers/: claude.rs  codex.rs  kimi.rs  mod.rs
src-tauri/windows/: hooks.nsh
tests/: provider-switch-contract.test.mjs  quota-layout-contract.test.mjs  view-contract.test.mjs
