[package]
name = "codex-cost"
version = "0.19.0"
description = "A cross-platform Tauri tray app that estimates daily Codex cost from local usage logs."
authors = ["xbotter"]
edition = "2021"
license = "MIT"
repository = "https://github.com/xbotter/codex-cost"
homepage = "https://github.com/xbotter/codex-cost"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codex_cost_lib"
crate-type = ["rlib"]

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
anyhow = "1"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
image = { version = "=0.25.9", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
